Fixed Cocktail image Urls and routes

--- a/CocktailMagician/CocktailMagician/Views/Bars/Details.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Bars/Details.cshtml
@@ -100,7 +100,7 @@
     {
 
         <h4>
-            <a asp-controller="Cocktails" asp-action="GetCocktails" asp-route-cocktailName="@item"> <span>🍸</span> @item</a>
+            <a asp-controller="Cocktails" asp-action="GetCocktails" asp-route-cocktailName="@item.Name"> <span>🍸</span> @item.Name</a>
         </h4>
     }
 </div>
