--- a/CocktailMagician/CocktailMagician/Views/Cocktails/Details.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Cocktails/Details.cshtml
@@ -96,7 +96,7 @@
         <img src="@star" width="25" alt="rating" />
     }
 </h2>
-<img class="picture" alt="@Model.Name" src="@Model.ImageUrl" width="300" height="200">
+<img class="picture" alt="@Model.Name" src="/storage/images/cocktails/@Model.ImageUrl" width="300" height="200">
 <div class="ingredients">
     <h2 class="ingredients">Ingredients</h2>
 
