--- a/CocktailMagician/CocktailMagician/Views/Cocktails/List.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Cocktails/List.cshtml
@@ -6,12 +6,21 @@
     ViewData["Controller"] = "Cocktails";
     ViewData["Action"] = "List";
     Layout = "~/Views/Shared/_Layout.cshtml";
-<<<<<<< HEAD
-    
-
-=======
->>>>>>> 3ad657f69d2bfd35a70dc5c249e41f9d97664766
 }
+
+<head>
+    <style>
+        .picture {
+            padding: 5px;
+            border: 1px solid #ddd;
+            width: 200px;
+            height: 320px;
+        }
+        .picture:hover {
+            box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+        }
+    </style>
+</head>
 
 <h1>Cocktails</h1>
 @if (User.IsInRole("cocktail magician"))
@@ -36,7 +45,7 @@
     @foreach (var cocktail in Model.Data)
     {<div class="col-sm-3 col-lg-3 col-md-3">
             <div class="thumbnail">
-                <img src="/storage/images/cocktail-thumbnails/@cocktail.ImageUrl" alt="" width="200" height="320">
+                <img src="/storage/images/cocktails/@cocktail.ImageUrl" alt="">
                 <div class="caption">
                     <h3>
                         <a asp-controller="Cocktails" asp-action="Details" asp-route-id="@cocktail.Id">@cocktail.Name</a>
