--- a/CocktailMagician/CocktailMagician/Views/Cocktails/Search.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Cocktails/Search.cshtml
@@ -27,7 +27,7 @@
         @foreach (var item in Model.Data)
         {
             <tr>
-                <td><a asp-controller="Cocktails" asp-action="Details" asp-route-id="@item.Id"><img src="@item.ImageUrl" width="150" height="200" /></a></td>
+                <td><a asp-controller="Cocktails" asp-action="Details" asp-route-id="@item.Id"><img src="/storage/images/cocktails/@item.ImageUrl" width="150" height="200" /></a></td>
                 <td class="information">
                     <b class="name">Name: </b>@Html.DisplayFor(m => item.Name)<br />
                     @*<b>Comments</b>(@Html.DisplayFor(m => item.Comments.Count))<br />*@
