--- a/CocktailMagician/CocktailMagician/Views/Home/PageNotFound.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Home/PageNotFound.cshtml
@@ -13,6 +13,6 @@
 </head>
 <h1>
     This page doesn't seem to exist.<br /><br />
-    It looks like the link pointing here was faulty.<br/>
+    It looks like the link pointing here was faulty or you tried to save empty fields.<span>&#9787;</span><br/>
     <a href="Index" class="btn btn-info" role="button">HomePage</a>
 </h1>
