--- a/CocktailMagician/CocktailMagician/Views/Home/Index.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Home/Index.cshtml
@@ -1,1 +1,64 @@
-﻿
+﻿@model HomeViewModel
+
+@{
+    var star = "/images/star.png";
+}
+<head>
+    <style>
+
+        .averageRating {
+            width: 25px;
+            display: inline-block;
+        }
+    </style>
+</head>
+    <div class="col-md-3">
+        <p class="lead">
+            <img class="img-responsive" alt="Cocktail Magician" src="~/Images/logo.png" />
+        </p>
+    </div>
+    <div class="col-lg-9"><partial name="_CarouselPartial" /></div>
+
+<h2 style="color:purple">Our top three Bars !!!</h2>
+<h4 >Click for details!</h4>
+
+<div class="row">
+
+    @foreach (var bar in Model.TopThreeBars)
+    {
+        <div class="col-sm-3 col-lg-3 col-md-3">
+            <div class="thumbnail">
+                <img class="image" src="/images/@bar.PhotoPath" alt="" />
+                <div class="caption">
+                    <h3>
+                        <a asp-controller="Bars" asp-action="Details" asp-route-id="@bar.Id">@bar.Name</a>
+                    </h3>
+                    <p>@bar.Address</p>
+                </div>
+                @*<p class="averageRating">
+                    @for (int i = 0; i < bar.AverageRating; i++)
+                    {
+                        <img src="@star" alt="rating" />
+                    }
+                </p>*@
+            </div>
+        </div>
+    }
+</div>
+<h2 style="color:purple">Our top three Cocktails !!!</h2>
+<h4>Click for details!</h4>
+<div class="row">
+    @foreach (var cocktail in Model.TopThreeCocktails)
+    {<div class="col-sm-3 col-lg-3 col-md-3">
+            <div class="thumbnail">
+                <img src="/storage/images/cocktails/@cocktail.ImageUrl" alt="">
+                <div class="caption">
+                    <h3>
+                        <a asp-controller="Cocktails" asp-action="Details" asp-route-id="@cocktail.Id">@cocktail.Name</a>
+                    </h3>
+                    <p>@cocktail.ShortDescription</p>
+                </div>
+            </div>
+        </div>
+    }
+</div>
