--- a/CocktailMagician/CocktailMagician/Areas/Admin/Views/Cocktails/Create.cshtml
+++ b/CocktailMagician/CocktailMagician/Areas/Admin/Views/Cocktails/Create.cshtml
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form enctype="multipart/form-data" asp-area="cocktail magician" asp-controller="Cocktails" asp-action="Create">
+        <form enctype="multipart/form-data" asp-area="Admin" asp-controller="Cocktails" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="@Model.CocktailViewModel.Name" class="control-label"></label>
