--- a/CocktailMagician/CocktailMagician/Views/Cocktails/Details.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Cocktails/Details.cshtml
@@ -5,88 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<head>
-    <style>
-
-        .picture {
-            display: inline-block;
-            height: 400px;
-            width: 250px;
-            border-radius: 8px;
-        }
-
-        .title {
-            font-size: 45px;
-            text-align: left;
-            text-decoration: underline;
-            line-height: 1;
-            font-family: Impact, Charcoal, sans-serif;
-        }
-
-        .averageRating {
-            text-align: left;
-            word-spacing: 10px;
-        }
-
-        .about {
-            font-size: 30px;
-            font-family: Impact, Charcoal, sans-serif;
-        }
-
-        .info {
-            font-size: 16px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        }
-
-        .ingredients {
-            display: inline-block;
-            font-family: Impact, Charcoal, sans-serif;
-            font-size: 35px;
-            text-indent: 60px;
-            margin-left: auto;
-            margin-right: auto;
-            vertical-align: top;
-            text-align: left;
-        }
-
-
-        .warning {
-            font-size: 25px;
-            font-family: Impact, Charcoal, sans-serif;
-        }
-
-        .comments {
-            font-size: 25px;
-            font-family: Impact, Charcoal, sans-serif;
-        }
-
-        .table, th, td {
-            border-top: 2px solid black;
-        }
-
-        th {
-            text-align: center;
-            font-size: 20px;
-        }
-
-        td {
-            text-indent: 5px;
-            border-bottom: 2px solid black;
-        }
-
-        .author {
-            font-size: 17px;
-            font-family: Impact, Charcoal, sans-serif;
-        }
-
-        .comment {
-            font-size: 22px;
-            text-align: left;
-        }
-    </style>
-</head>
-
+@section Styles {
+    <link href="@Url.Content("~/css/cocktailDetails.css")" rel="stylesheet" type="text/css" />
+}
 
 <h2 class="title">@Model.Name Cocktail</h2>
 <a asp-area="Admin" asp-controller="AddIngredientToCocktail" asp-action="AvailableIngredients" asp-route-Id="@Model.Id" class="btn btn-danger">Edit Available Ingredients</a>
