--- a/CocktailMagician/CocktailMagician/Views/Shared/_Layout.cshtml
+++ b/CocktailMagician/CocktailMagician/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
     <link href="~/css/site.css" rel="stylesheet" />
+    @RenderSection("Styles", false)
 </head>
 <body>
     <div class="container">
